# inspectrone-master-project

./: .envrc  .gitignore  Dockerfile  FCGF_demo_file.py  Feature_dist_data.ods  README.md  install_cuda_ubuntu18.sh  install_jetson.sh  notes  readme-jetson.md  readme-ubuntu.md  readme.md  readme.txt  remote.sh
catkin_ws/src/simple_ply_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/simple_ply_publisher/launch/: example.launch
catkin_ws/src/simple_ply_publisher/src/: PlyPublisher.cpp
containers/: demo_teaser.py
demo_files/: FCGF_demo_file.py  demo_icp.py  demo_teaser.py  helpers.py  tank_0.02 (2).ply
docs/: [cropping.txt]_RRE_[0.025_0.075].eps  [cropping.txt]_RTE_[0.025_0.075].eps  [cropping.txt]_hit_ratio_[0.025_0.075].eps  [cropping.txt]_loss_[0.025_0.075].eps  [cropping.txt]_match_ratio_[0.025_0.075].eps  [crossmatch.txt]_RRE_[0.025_0.075].eps  [crossmatch.txt]_RTE_[0.025_0.075].eps  [crossmatch.txt]_hit_ratio_[0.025_0.075].eps  [crossmatch.txt]_loss_[0.025_0.075].eps  [crossmatch.txt]_match_ratio_[0.025_0.075].eps  [log.txt]_RRE_[0.075_0.075_0.075].eps  [log.txt]_RTE_[0.075_0.075_0.075].eps  [log.txt]_hit_ratio_[0.075_0.075_0.075].eps  [log.txt]_loss_[0.075_0.075_0.075].eps  [log.txt]_match_ratio_[0.075_0.075_0.075].eps  [termnial-log5-fjordor.txt]_RRE_[0.075].eps  [termnial-log5-fjordor.txt]_RTE_[0.075].eps  [termnial-log5-fjordor.txt]_hit_ratio_[0.075].eps  [termnial-log5-fjordor.txt]_loss_[0.075].eps  [termnial-log5-fjordor.txt]_match_ratio_[0.075].eps  performancefitness.eps  performanceprocessing time.eps  performancepublish point cloud time.eps  (+2 more)
(+104 files in other folders)
