<?xml version="1.0"?>
<package>
  <name>simple_ply_publisher</name>
  <version>0.1.0</version>
  <description>Publishes a point cloud from a .ply file as PointCloud2 message.</description>
  <maintainer email="fjodor@to.do">Fjodor</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
